[package]
name = "fillout"
version = "0.1.0"
authors = ["Mattias Päivärinta <mattias@paivarinta.se>"]
edition = "2018"
description = "A CLI tool to fill out placeholders in templates"
readme = "README.md"
repository = "https://github.com/mattias-p/fillout"
license = "Apache-2.0"
keywords = ["cli", "template", "generator", "static", "file"]
categories = ["command-line-utilities", "template-engine"]

[badges]
maintenance = { status = "actively-maintained" }

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1

[dependencies]
anyhow = "1.0"
csv = "1.1"
exitcode = "1.1.2"
structopt = { version = "0.3", default-features = false }
terminal_size = "0.1.16"
